--- a/xidlehook-daemon/Cargo.toml
+++ b/xidlehook-daemon/Cargo.toml
@@ -35,6 +35,6 @@ extended-description = """\
 xidlehook is a general-purpose replacement for xautolock.
 this is the daemon
 """
-depends = "$auto, ,libxcb1, libpulse0"
+depends = "$auto, libxcb1, libpulse0"
 section = "utils"
 priority = "optional"
